// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/router-base-ee render base route data snap 1`] = `
Array [
  Object {
    "element": <div>
      home
    </div>,
    "key": "home",
    "path": "/",
  },
  Object {
    "element": <div>
      userCenter
    </div>,
    "key": "userCenter",
    "path": "userCenter",
  },
  Object {
    "element": <div>
      system
    </div>,
    "key": "system",
    "path": "system",
  },
  Object {
    "element": <div>
      account
    </div>,
    "key": "account",
    "path": "account",
  },
  Object {
    "element": <div>
      project
    </div>,
    "key": "project",
    "path": "project",
  },
  Object {
    "children": Array [
      Object {
        "element": <div>
          member
        </div>,
        "key": "member",
        "path": ":projectID/member",
      },
      Object {
        "element": <div>
          cloudBeaver
        </div>,
        "key": "cloudBeaver",
        "path": ":projectID/cloudBeaver",
      },
      Object {
        "children": Array [
          Object {
            "element": <div>
              dataSourceList
            </div>,
            "key": "dataSourceList",
            "path": "",
          },
          Object {
            "element": <div>
              dataSourceCreate
            </div>,
            "key": "dataSourceCreate",
            "path": "create",
          },
          Object {
            "element": <div>
              dataSourceUpdate
            </div>,
            "key": "dataSourceUpdate",
            "path": "update/:dbServiceUid",
          },
        ],
        "element": <div
          data-test-parent-id="dataSource"
        >
          <Outlet />
        </div>,
        "key": "dataSource",
        "path": ":projectID/db-services",
      },
      Object {
        "children": Array [
          Object {
            "element": <div>
              syncDataSourceList
            </div>,
            "key": "syncDataSourceList",
            "path": "",
          },
          Object {
            "element": <div>
              syncDataSourceCreate
            </div>,
            "key": "syncDataSourceCreate",
            "path": "create",
          },
          Object {
            "element": <div>
              syncDataSourceUpdate
            </div>,
            "key": "syncDataSourceUpdate",
            "path": "update/:taskId",
          },
        ],
        "element": <div
          data-test-parent-id="syncDataSource"
        >
          <Outlet />
        </div>,
        "key": "syncDataSource",
        "path": ":projectID/syncDataSource",
      },
      Object {
        "children": Array [
          Object {
            "element": <div>
              dataExportManagement
            </div>,
            "key": "dataExportManagement",
            "path": "",
          },
          Object {
            "element": <div>
              CreateExportTask
            </div>,
            "key": "CreateExportTask",
            "path": "create",
          },
          Object {
            "element": <div>
              ExportTaskDetail
            </div>,
            "key": "ExportTaskDetail",
            "path": ":workflowID",
          },
        ],
        "element": <div
          data-test-parent-id="dataExportManagement"
        >
          <Outlet />
        </div>,
        "key": "dataExportManagement",
        "path": ":projectID/data/export",
      },
    ],
    "element": <UNDEFINED />,
    "key": "projectDetail",
    "path": "project/*",
  },
]
`;

exports[`base/router-base-ee render base router when version is ce render router account 1`] = `
<body>
  <div>
    <div>
      account
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ce render router home 1`] = `
<body>
  <div>
    <div>
      home
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ce render router project render route dataSourceCreate 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="dataSource"
    >
      <div>
        dataSourceCreate
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ce render router project render route dataSourceList 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="dataSource"
    >
      <div>
        dataSourceList
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ce render router project render route dataSourceUpdate 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="dataSource"
    >
      <div>
        dataSourceUpdate
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ce render router project render route member 1`] = `
<body>
  <div>
    <div>
      member
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ce render router project render router cloudBeaver 1`] = `
<body>
  <div>
    <div>
      cloudBeaver
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ce render router system 1`] = `
<body>
  <div>
    <div>
      system
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ce render router userCenter 1`] = `
<body>
  <div>
    <div>
      userCenter
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ee render route dataExportManagement render route CreateExportTask 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="dataExportManagement"
    >
      <div>
        CreateExportTask
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ee render route dataExportManagement render route ExportTaskDetail 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="dataExportManagement"
    >
      <div>
        ExportTaskDetail
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ee render route dataExportManagement render route dataExportManagement 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="dataExportManagement"
    >
      <div>
        dataExportManagement
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ee render route syncDataSource render route syncDataSourceList 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="syncDataSource"
    >
      <div>
        syncDataSourceList
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ee render route syncDataSource render route syncDataSourceList 2`] = `
<body>
  <div>
    <div
      data-test-parent-id="syncDataSource"
    >
      <div>
        syncDataSourceCreate
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ee render route syncDataSource render route syncDataSourceList 3`] = `
<body>
  <div>
    <div
      data-test-parent-id="syncDataSource"
    >
      <div>
        syncDataSourceUpdate
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ee render router project 1`] = `
<body>
  <div>
    <div>
      project
    </div>
  </div>
</body>
`;
